# transport-econometrics

./: .gitignore  README.md  pyproject.toml
benchmarks/: benchmark_hsis_large_sample.py  profile_likelihood.py
docs/: generic_model_spec.md  icer_hpcc.md  likelihood_math.md  nlogit_benchmark.md  real_data_validation.md  rpnb_hpcc.md  rpnb_likelihood_math.md  rpnb_nlogit_benchmark.md  threshold_parameterization.md
examples/: generic_rpnb_model.yaml  generic_rpopit_model.yaml  hsis_csv_schema.csv  hsis_model.yaml  hsis_sample.csv  hsis_schema.yaml  model.yaml  nlogit_results_template.csv  rpnb_crashes.csv  rpnb_model.yaml  run_example.py  run_rpnb_example.py
hpcc/: install_env.sh  install_rpnb_env.sh  run_rpnb.sbatch  run_rpopit.sbatch
src/rpnb/: __init__.py  audit_nlogit.py  benchmark_nlogit.py  checkpoint.py  cli.py  compare_runs.py  config.py  draws.py  likelihood.py  marginal_effects.py  model.py  nlogit_comparison.py  optimizer.py  output.py  simulation.py
src/rpopit/: __init__.py  benchmark_nlogit.py  cli.py  config.py  data_validation.py  likelihood.py  marginal_effects.py  model.py  model_comparison.py  model_comparison_report.py  nlogit_comparison.py  optimizer.py  output.py  simulation.py  validate_hsis_data.py
tests/: test_checkpoint_restart.py  test_config.py  test_data_validation.py  test_draws.py  test_estimation_simulated.py  test_likelihood.py  test_model_comparison.py  test_nlogit_comparison.py  test_optimizer_selection.py  test_rpnb_config.py  test_rpnb_estimation_simulated.py  test_rpnb_likelihood.py  test_rpnb_nlogit_comparison.py  test_rpnb_statsmodels_validation.py  test_scalability.py  test_validation.py
validation_suite/: model_comparison_report.py  validate_hsis_data.py
