[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpopit"
version = "0.1.0"
description = "Random Parameters Ordered Probit estimator using simulated maximum likelihood."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "rpopit contributors" }]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "pandas>=1.5",
    "PyYAML>=6.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "statsmodels>=0.14"]

[project.scripts]
rpopit = "rpopit.cli:main"
validate-hsis = "rpopit.validate_hsis_data:main"
compare-models = "rpopit.model_comparison_report:main"
benchmark-nlogit = "rpopit.benchmark_nlogit:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
